# Video-Music-Lyrics-App

./: .gitignore  LICENSE  README.md  base.py  main.py  pyproject.toml
locals/: en.py  zh.py
module/getlist/: __init__.py  data.py  initialization.py
module/getmedia/: data.py  initialization.py
module/initialization/: data.py  initialization.py
pages/: about.py  start.py
